@@ -167,7 +167,8 @@ simpleMutex _PL_mutexes[] =
   PTHREAD_MUTEX_INITIALIZER,		/* L_OP */
   PTHREAD_MUTEX_INITIALIZER,		/* L_INIT */
   PTHREAD_MUTEX_INITIALIZER,		/* L_TERM */
-  PTHREAD_MUTEX_INITIALIZER		/* L_GC */
+  PTHREAD_MUTEX_INITIALIZER,		/* L_GC */
+  PTHREAD_MUTEX_INITIALIZER		/* L_FOREIGN */
 };
 
 #ifdef USE_CRITICAL_SECTIONS
