@@ -108,6 +108,7 @@ extern simpleMutex _PL_mutexes[];	/* Prolog mutexes */
 #define L_INIT	       14
 #define L_TERM	       15
 #define L_GC	       16
+#define L_FOREIGN      17
 
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 The IFMT(id, g) macro  is  used  to   bypass  mutexes  if  threading  is
